[ios] Refactor small method in recent tabs

This CL refactors a small piece of code in
RecentTabsTableViewController. This method was previously hard to read
and had superfluous variables.

Bug: 804590
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I19af585c6177ef45bb7a6a255a8d3371c5b73073
Reviewed-on: https://chromium-review.googlesource.com/1067081
Commit-Queue: edchin <edchin@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560341}
Former-commit-id: c301cef5024aa2796eb01f06ed12bf29b1139e3d